vault/bsc/probes/probe_nullable_pair_leak.expected.stderr
<probe>:16:1: error: memory leak of value: `b`
}
^
1 error generated.
